.tekton/events/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cd-pipeline
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: cd-listener
spec:
  to:
    kind: Service
    name: el-cd-listener
  tls: {}
  port:
    targetPort: http-listener


---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: products
  labels: {}
spec:
  to:
    kind: Service
    name: products
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: ''
    destinationCACertificate: ''
  path: /
  port:
    targetPort: http
